--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:padding="10dp">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-    <EditText
-        android:id="@+id/edit_txt"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edit_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/send_btn"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="发送" />
+        <Button
+            android:id="@+id/send_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="发送" />
 
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="返回" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/ret_txt"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:background="@drawable/txt_bg" />
+        android:layout_weight="1"
+        android:padding="10dp"
+        tools:text="123" />
+
 </LinearLayout>
